--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -17,7 +17,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <h3>JobShala</h3>
@@ -79,9 +79,7 @@
         </div>
       </div>
     </nav>
-
-    <!-- Include modals -->
-    <%- include('landing/loginModal') %> <%- include('landing/registerModal')
-    %><%- body %>
+    <%- include('landing/loginModal') %> <%- body %>
+    <!-- Login modals -->
   </body>
 </html>
