--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -15,9 +15,10 @@
       src="https://kit.fontawesome.com/70966ca7cd.js"
       crossorigin="anonymous"
     ></script>
+    <script src="frontendUtility.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <h3>JobShala</h3>
@@ -37,7 +38,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <% if(loginStatus==="seeker") { %>
             <li class="nav-item">
-              <a class="nav-link" href="/jobs">
+              <a class="nav-link" href="/job/all">
                 <div class="d-flex flex-column align-items-center">
                   <i class="fa-solid fa-briefcase"></i>
                   <div>Jobs</div>
@@ -46,10 +47,19 @@
             </li>
             <% } %> <% if(loginStatus) { %>
             <li class="nav-item">
-              <a class="nav-link" href="/jobs">
+              <a class="nav-link" href="/dashboard">
                 <div class="d-flex flex-column align-items-center">
                   <i class="fa-solid fa-solar-panel"></i>
                   <div class="">Dashboard</div>
+                </div>
+              </a>
+            </li>
+            <% } %> <% if(loginStatus === "recruiter"){%>
+            <li class="nav-item">
+              <a class="nav-link" href="/job/new">
+                <div class="d-flex flex-column align-items-center">
+                  <i class="fa-solid fa-circle-plus"></i>
+                  <div class="">Create Job</div>
                 </div>
               </a>
             </li>
