--- a/src/views/recruiter/createJobForm.ejs
+++ b/src/views/recruiter/createJobForm.ejs
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-5 pt-5 pb-3 text-warning">Job Posting Form</h1>
+<h1 class="text-center pt-5 pb-3 text-warning fw-bold">Job Posting Form</h1>
 <div class="pl-5" style="position: relative">
   <div class="p-5" style="margin-left: 10%">
     <img
