--- a/src/views/seeker/Jobs.ejs
+++ b/src/views/seeker/Jobs.ejs
@@ -1,26 +1,60 @@
-<div class="container d-flex flex-wrap justify-content-around mt-5">
-  <% jobs.forEach(function(job) { %>
-  <div class="card text-center m-3" style="width: 18rem">
-    <div class="card-header">
-      <h6 class="card-title fs-4"><%= job.companyName %></h6>
-    </div>
-    <div class="card-body">
-      <h5 class="card-title"><%= job.postTitle %></h5>
-      <p class="card-text">CTC: <%= job.ctc %></p>
-      <p class="card-text">Deadline: <%= job.deadline %></p>
-      <p class="card-text">Job Location: <%= job.location %></p>
-      <div class="d-flex flex-wrap justify-content-between">
-        <% job.requirements.forEach(function(requirement) { %>
-        <span class="border border-warning rounded-0 p-1">
-          <%= requirement %>
-        </span>
-        <% }) %>
+<div>
+  <div class="container d-flex flex-wrap justify-content-around mt-5 mb-5">
+    <% jobs.forEach(function(job) { %>
+    <div class="card text-center m-3" style="width: 18rem">
+      <div class="card-header">
+        <h6 class="card-title text-warning fw-bold fs-4">
+          <%= job.companyName %>
+        </h6>
+      </div>
+      <div
+        class="card-body ps-4 bg-secondary-emphasis"
+        style="text-align: justify"
+      >
+        <h5 class="card-title"><b><%= job.postTitle %></b></h5>
+        <p class="card-text">CTC:<b> <%= job.ctc %></b></p>
+        <p class="card-text">Deadline:<b> <%= job.deadline %> </b></p>
+        <p class="card-text">Job Location:<b> <%= job.location %> </b></p>
+        <div class="d-flex flex-wrap justify-content-between">
+          <% job.requirements.forEach(function(requirement) { %>
+          <span class="border border-warning rounded-0 p-1">
+            <%= requirement %>
+          </span>
+          <% }) %>
+        </div>
+      </div>
+      <div class="card-footer d-flex justify-content-around">
+        <a href="#" class="btn btn-warning">View Details</a>
+        <a href="#" class="btn btn-dark">Apply Now</a>
       </div>
     </div>
-    <div class="card-footer d-flex justify-content-around">
-      <a href="#" class="btn btn-warning">View Details</a>
-      <a href="#" class="btn btn-dark">Apply Now</a>
-    </div>
+    <% }) %>
   </div>
-  <% }) %>
+  <nav>
+    <ul class="pagination pagination-lg justify-content-center">
+      <% if (currentPage > 1) { %>
+      <li class="page-item">
+        <a class="page-link text-warning" href="?page=<%= currentPage - 1 %>"
+          >Previous</a
+        >
+      </li>
+      <% } %> <% for (let i = 1; i <= totalPages; i++) { %> <% if (i ===
+      currentPage) { %>
+      <li class="page-item">
+        <span class="page-link bg-dark text-warning"><%= i %></span>
+      </li>
+      <% } else { %>
+
+      <li class="page-item">
+        <a class="page-link text-warning" href="?page=<%= i %>"><%= i %></a>
+      </li>
+      <% } %> <% } %> <% if (currentPage < totalPages) { %>
+      <li class="page-item">
+        <a class="page-link text-warning" href="?page=<%= currentPage + 1 %>"
+          >Next</a
+        >
+      </li>
+      <% } %>
+    </ul>
+  </nav>
 </div>
