--- a/src/views/recruiter/updateJobForm.ejs
+++ b/src/views/recruiter/updateJobForm.ejs
@@ -119,6 +119,21 @@
         />
       </div>
     </div>
+    <div class="row mb-3">
+      <label for="noOfOpenings" class="col col-form-label text-warning"
+        >No. Of Openings:</label
+      >
+      <div class="col">
+        <input
+          type="number"
+          class="form-control"
+          id="noOfOpenings"
+          name="noOfOpenings"
+          value="<%= job.noOfOpenings %>"
+          required
+        />
+      </div>
+    </div>
     <div class="d-flex justify-content-end">
       <button type="submit" class="btn btn-warning">Update</button>
     </div>
