--- a/src/views/recruiter/Dashboard.ejs
+++ b/src/views/recruiter/Dashboard.ejs
@@ -14,17 +14,21 @@
     <% jobs.forEach((job, index) => { %>
     <tr>
       <th scope="row"><%= index + 1 %></th>
-      <td>
-        <a class="btn btn-dark" href="/job/details/<%=job.id%>">
-          View Details</a
-        >
-        <a class="btn btn-warning" href="/job/update/<%=job.id%>"> Update</a>
+      <td class="d-flex">
+        <a class="btn btn-primary me-1" href="/job/details/<%=job.id%>">
+          <i class="fa-solid fa-circle-info"></i
+        ></a>
+        <a class="btn btn-warning me-1" href="/job/update/<%=job.id%>">
+          <i class="fa-solid fa-pen-to-square"></i
+        ></a>
         <form
           action="/job/delete/<%= job.id %>?_method=DELETE"
           method="POST"
           onsubmit="return confirmDelete()"
         >
-          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-danger">
+            <i class="fa-solid fa-trash-can"></i>
+          </button>
         </form>
       </td>
       <td><%= job.companyName %></td>
