--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -63,6 +63,20 @@
                 </div>
               </a>
             </li>
+            <% } %> <% if(loginStatus === "seeker"){%>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                data-bs-toggle="modal"
+                data-bs-target="#resumeUploadModal"
+                href="#"
+              >
+                <div class="d-flex flex-column align-items-center">
+                  <i class="fa-solid fa-circle-plus"></i>
+                  <div class="">Upload Resume</div>
+                </div>
+              </a>
+            </li>
             <% } %>
           </ul>
           <% if(loginStatus) { %>
@@ -101,5 +115,10 @@
     </div>
     <%}%> <%- include('landing/loginModal') %> <%- body %>
     <!-- Login modals -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
