--- a/src/views/seeker/Jobs.ejs
+++ b/src/views/seeker/Jobs.ejs
@@ -24,8 +24,21 @@
         </div>
       </div>
       <div class="card-footer d-flex justify-content-around">
-        <a href="#" class="btn btn-warning">View Details</a>
-        <a href="#" class="btn btn-dark">Apply Now</a>
+        <a href="/job/apply/<%= job.id%>" class="btn btn-warning"
+          >View Details</a
+        >
+        <%if(resumeFlag){%> >
+        <a href="/job/apply/<%= job.id%>" class="btn btn-dark">Easy Apply </a>
+        <%} else {%>
+        <a
+          class="btn btn-dark"
+          data-bs-toggle="modal"
+          data-bs-target="#resumeUploadModal"
+          href="#"
+        >
+          Upload Resume
+        </a>
+        <%}%>
       </div>
     </div>
     <% }) %>
@@ -58,3 +71,4 @@
     </ul>
   </nav>
 </div>
+<%- include('./resumeUploadModal') %>
