--- a/src/views/seeker/applyPage.ejs
+++ b/src/views/seeker/applyPage.ejs
@@ -67,36 +67,20 @@
         </div>
 
         <div class="card-footer d-flex justify-content-between">
-          <% if (job.applicants && job.applicants.length > 0) { %>
-          <h5 class="card-title">Applicants</h5>
-          <ul class="list-group list-group-flush mb-0">
-            <% for (const applicant of applicants) { %>
-            <li class="list-group-item border-top">
-              <div>
-                <div>
-                  <div class="fw-bold"><%= applicant.name %></div>
-                  <div class="text-muted ms-2 mb-2">
-                    <i class="fa-solid fa-square-envelope text-success"></i> <%=
-                    applicant.email %>
-                  </div>
-                </div>
-                <!-- check for this url after multer -->
-                <a
-                  href="/applicant/resume/<%= applicant.email %>"
-                  class="btn btn-warning btn-sm"
-                >
-                  View resume
-                </a>
-              </div>
-            </li>
-            <% } %>
-          </ul>
-
-          <% } else { %>
-          <h5 class="card-title">No Applicants Yet</h5>
-          <% } %>
+          <%if(resumeFlag){%> >
+          <a href="/job/apply/<%= job.id%>" class="btn btn-dark">Easy Apply </a>
+          <%} else {%>
+          <a
+            class="btn btn-dark"
+            data-bs-toggle="modal"
+            data-bs-target="#resumeUploadModal"
+            href="#"
+            >Upload Resume
+          </a>
+          <%}%>
         </div>
       </div>
     </div>
   </div>
 </div>
+<%- include('./resumeUploadModal') %>
