--- a/src/views/landing/landingPage.ejs
+++ b/src/views/landing/landingPage.ejs
@@ -3,6 +3,9 @@
   style="height: 80dvh"
 >
   <div>
+    <!--=====================================================-->
+    <!--=== for displaying errors in login or registraion ===-->
+    <!--=====================================================-->
     <% if(errorMessage){ %> <% if(errorMessage == "success"){ %>
     <div class="alert alert-success">Great Success ! Please Login</div>
     <%} else { %>
