--- a/src/views/seeker/dashboard.ejs
+++ b/src/views/seeker/dashboard.ejs
@@ -1,2 +1,30 @@
 <%- include('./resumeUploadModal') %>
-<div></div>
+<h1 class="text-warning text-center mt-5">Jobs Applied</h1>
+<table class="table table-striped mt-5">
+  <thead>
+    <tr class="table-dark">
+      <th scope="col">#</th>
+      <th scope="col">Operations</th>
+      <th scope="col">Company</th>
+      <th scope="col">Job Title</th>
+      <th scope="col">Location</th>
+      <th scope="col">Salary</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% jobs.forEach((job, index) => { %>
+    <tr>
+      <th scope="row"><%= index + 1 %></th>
+      <td class="d-flex">
+        <a class="btn btn-primary me-1" href="/job/details/<%=job.id%>">
+          <i class="fa-solid fa-circle-info"></i
+        ></a>
+      </td>
+      <td><%= job.companyName %></td>
+      <td><%= job.postTitle %></td>
+      <td><%= job.location %></td>
+      <td><%= job.ctc %></td>
+    </tr>
+    <% }) %>
+  </tbody>
+</table>
